<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <EditText
        android:id="@+id/etNombreSerie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/nombre_de_la_serie"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textotemporada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/temporadas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombreSerie" />

    <EditText
        android:id="@+id/etTemporadas"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="1"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textotemporada"
        app:layout_constraintTop_toTopOf="@+id/textotemporada"
        app:layout_constraintBottom_toBottomOf="@+id/textotemporada" />

    <TextView
        android:id="@+id/tvEmpresaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/empresa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textotemporada" />

    <EditText
        android:id="@+id/etEmpresa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:hint="Netflix, HBO, etc."
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvEmpresaLabel"
        app:layout_constraintTop_toTopOf="@+id/tvEmpresaLabel"
        app:layout_constraintBottom_toBottomOf="@+id/tvEmpresaLabel" />

    <Button
        android:id="@+id/añadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="536dp"
        android:text="@string/a_adir_serie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/borrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/borrar_serie"
        app:layout_constraintStart_toEndOf="@+id/añadir"
        app:layout_constraintTop_toTopOf="@+id/añadir" />

    <Button
        android:id="@+id/listado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ver_listado"
        app:layout_constraintStart_toStartOf="@+id/añadir"
        app:layout_constraintTop_toBottomOf="@+id/añadir" />

    <Button
        android:id="@+id/descripcionbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/a_adir_descripcion"
        app:layout_constraintStart_toEndOf="@+id/listado"
        app:layout_constraintTop_toTopOf="@+id/listado" />

</androidx.constraintlayout.widget.ConstraintLayout>